--- a/index.html
+++ b/index.html
@@ -23,14 +23,18 @@
     const canvas = document.getElementById('gameCanvas');
     const ctx = canvas.getContext('2d');
 
+    // Load bird image
+    const birdImg = new Image();
+    birdImg.src = 'https://raw.githubusercontent.com/samuelcust/flappy-bird-assets/master/sprites/yellowbird-midflap.png';
+
     // Game variables
     let bird = {
       x: 50,
       y: 150,
-      width: 20,
-      height: 20,
-      gravity: 1,
-      lift: -15,
+      width: 34,
+      height: 24,
+      gravity: 0.6,
+      lift: -10,
       velocity: 0,
     };
 
@@ -44,7 +48,7 @@
     // Control the bird with spacebar
     window.addEventListener('keydown', (e) => {
       if (e.code === 'Space') {
-        bird.velocity = bird.lift;
+        bird.velocity += bird.lift;
       }
     });
 
@@ -99,11 +103,10 @@
       ctx.clearRect(0, 0, canvas.width, canvas.height);
 
       // Draw the bird
-      ctx.fillStyle = 'yellow';
-      ctx.fillRect(bird.x, bird.y, bird.width, bird.height);
+      ctx.drawImage(birdImg, bird.x, bird.y, bird.width, bird.height);
 
       // Draw the pipes
-      ctx.fillStyle = 'green';
+      ctx.fillStyle = '#B22222'; // Brick red color
       for (let pipe of pipes) {
         ctx.fillRect(pipe.x, 0, pipeWidth, pipe.topHeight);
         ctx.fillRect(pipe.x, canvas.height - pipe.bottomHeight, pipeWidth, pipe.bottomHeight);
