--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
     const canvas = document.getElementById('gameCanvas');
     const ctx = canvas.getContext('2d');
 
+    // Load bird image
+    const birdImg = new Image();
+    birdImg.src = 'https://raw.githubusercontent.com/samuelcust/flappy-bird-assets/master/sprites/yellowbird-midflap.png';
+
     // Game variables
     let bird;
     let pipes;
@@ -37,8 +41,8 @@
       bird = {
         x: 50,
         y: 150,
-        width: 20,
-        height: 20,
+        width: 34,
+        height: 24,
         gravity: 0.3,
         lift: -6,
         velocity: 0,
@@ -112,8 +116,7 @@
       ctx.clearRect(0, 0, canvas.width, canvas.height);
 
       // Draw the bird
-      ctx.fillStyle = 'yellow';
-      ctx.fillRect(bird.x, bird.y, bird.width, bird.height);
+      ctx.drawImage(birdImg, bird.x, bird.y, bird.width, bird.height);
 
       // Draw the pipes
       ctx.fillStyle = '#B22222'; // Brick red color
