--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     }
     canvas {
       display: block;
-      margin: 0 auto;
+      margin: 20px auto;
+      border: 10px solid;
+      border-image: linear-gradient(45deg, #ff00ff, #00ffff, #ff0000, #ffff00) 1;
       background: url('https://raw.githubusercontent.com/samuelcust/flappy-bird-assets/master/sprites/background-day.png') repeat-x;
       background-size: cover;
     }
